--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -14,7 +14,7 @@
 }
 .project-page__wrapper {
   position: relative;
-  margin-top: 56px;
+  margin-top: 20px;
   width: 100%;
   /* height: 800px; */
   /* height: 100%;  */
@@ -97,10 +97,15 @@ img {
   height: 100%;
   /* object-fit: contain; */
 }
-
-@media (max-width: 380px){
+@media( max-width: 768px){
   .project-page__wrapper > h2 {
     font-size: 25px;
+  }
+  
+}
+@media (max-width: 380px){
+  .project-page__wrapper > h2 {
+    font-size: 22px;
   }
   .project {
     width: 320px;
